# GoDemo

ArchTest/ClassA/: ClassA.go  go.mod
ArchTest/ClassB/: ClassB.go  go.mod
ArchTest/Factory/: Factory.go  go.mod
ArchTest/Intf/: IntfClassA.go  go.mod
ArchTest/main/: go.mod  main.go
CgoCallback/: cgo.go  main.go
CgoWithCmake/: build.sh
CgoWithCmake - Copy/ExtC/: CMakeLists.txt
CgoWithCmake - Copy/ExtC/include/: ExtC.h
CgoWithCmake - Copy/ExtC/src/: ExtC.cpp
CgoWithCmake - Copy/libs/: ExtC_library.lib
CgoWithCmake/CPyEngine/: CMakeLists.txt
CgoWithCmake/CPyEngine/include/: CPyEngineIntf.h  PyEngine.h
CgoWithCmake/CPyEngine/src/: CPyEngineIntf.cpp  PyEngine.cpp
CgoWithCmake/CPyEngine/src/CellLayout/: PCell.cpp  PCell.hpp
CgoWithCmake/main/: buildC.sh  cgo.go  main.c
ClosureReEnterr/: main.go
Doc/: DocTest.go
FuncUncertPar/: funcUncertPar.go
GoPyEngine/: build.sh  go.mod  go.sum
GoPyEngine/PyEngineTest/: main  main.go
GoPyInterCallback/: callback.py  go.mod  main.go
InputText/: build.sh  input.go
Interface/: main.go
LibHook/: build.bat  build.sh  lib.go  libhello.h  main.go
RegTest/: RegText.go
WinDLL/: build.bat  dll.go  lib.h  main.go
sliceClone/: main.go
